--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
 
 
 	<dependencies>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>17.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
