--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.coinbase.api</groupId>
+			<artifactId>coinbase-java</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.3.2</version>
