--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,17 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz-jobs</artifactId>
+			<version>2.2.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.coinbase.api</groupId>
 			<artifactId>coinbase-java</artifactId>
 			<version>1.0.0</version>
