--- a/.project
+++ b/.project
@@ -30,4 +30,15 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1405109795771</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-highcharts</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
