--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<activejdbc.version>1.4.9</activejdbc.version>
+		<activejdbc.version>1.4.10-SNAPSHOT</activejdbc.version>
 	</properties>
 	<build>
 		<plugins>
