--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,25 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<activejdbc.version>1.4.10-SNAPSHOT</activejdbc.version>
 	</properties>
+	
+	<repositories>
+    <repository>
+        <id>sonatype-nexus-snapshots</id>
+        <name>Sonatype Nexus Plugin Snapshots</name>
+        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        <releases>
+            <enabled>false</enabled>
+        </releases>
+        <snapshots>
+            <enabled>true</enabled>
+        </snapshots>
+    </repository>
+</repositories>
+ 
+
+
+	
+	
 	<build>
 		<plugins>
 			<plugin>
