--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: java
 jdk:
   - oraclejdk8
+install: mvn install -Dmaven.compiler.target=1.8 -Dmaven.compiler.source=1.8 -DskipTests=true -B
+script: mvn test -Dmaven.compiler.target=1.8 -Dmaven.compiler.source=1.8 -B
