--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,10 @@ install: mvn install -Dmaven.compiler.target=1.8 -Dmaven.compiler.source=1.8 -Ds
 script: mvn test -Dmaven.compiler.target=1.8 -Dmaven.compiler.source=1.8 -B
 deploy:
   provider: releases
-  user: "tchoulihan"
-  password:
-    secure: llmKlFp6Y17kykR2ZS3zjPB9DeHcucMXwyMU4wzF7VEB70n7dK8fpRmks3C59Fs75rjjq4pEvrxrSzMB21DKU2yWT2CPfmHKNSn6qRoMvpmB6o02vLLNKfo3gsDl/ycDoIuXA5M/K3P+yG2lLQIZi1fFc8xUVPW061i4Zfc3JAU=
-  file: "dunno.txt"
+  api-key: c66d3dda82e949116e6dfbc5170152ba5eeb49b1
+  file: bitpieces_practice-0.0.1-SNAPSHOT-jar-with-dependencies.jar
   skip_cleanup: true
   on:
     tags: true
     all_branches: true
+
