--- a/resources/.htaccess
+++ b/resources/.htaccess
@@ -2,7 +2,8 @@
 Options +FollowSymLinks
 RewriteEngine on
 
-redirect 301 /index http://68.56.177.238:8080/stage/web/landing.html
+# testing a redirect: redirect 301 /index http://68.56.177.238:8080/stage/web/landing.html
 
+RewriteRule ^creator/([^/.]+)/?$ creator_main?creator=$1 [L]
 
 
