--- a/resources/.htaccess
+++ b/resources/.htaccess
@@ -4,6 +4,8 @@ RewriteEngine on
 
 # testing a redirect: redirect 301 /index http://68.56.177.238:8080/stage/web/landing.html
 
-RewriteRule /stage/web/^creator/([^/.]+)/?$ creator_main.html?creator=$1 [L]
+#RewriteRule /stage/web/^creator/([^/.]+)/?$ creator_main.html?creator=$1 [L]
+
+RewriteRule ^creator/([^/.]+)/?$ /stage/web/creator_main.html?creator=$1 [L]
 
 
