--- a/resources/.htaccess
+++ b/resources/.htaccess
@@ -8,4 +8,6 @@ RewriteEngine on
 
 RewriteRule ^creator/([^/.]+)/?$ /stage/web/creator_main.html?creator=$1 [L]
 
+RewriteRule ^product/([^/.]+)/?$ product.php?id=$1 [L]
+
 
