--- a/resources/.htaccess
+++ b/resources/.htaccess
@@ -4,10 +4,7 @@ RewriteEngine on
 
 # testing a redirect: redirect 301 /index http://68.56.177.238:8080/stage/web/landing.html
 
-#RewriteRule /stage/web/^creator/([^/.]+)/?$ creator_main.html?creator=$1 [L]
 
-RewriteRule ^creator/([^/.]+)/?$ /stage/web/creator_main.html?creator=$1 [L]
-
-RewriteRule ^product/([^/.]+)/?$ product.php?id=$1 [L]
-
+#Think i finally got it
+RewriteRule ([^/.]+)/([^/.]+)/creator_main/([^/.]+)/?$ stage/web/creator_main?creator=$1 [L]
 
