--- a/resources/.htaccess
+++ b/resources/.htaccess
@@ -5,8 +5,8 @@ RewriteEngine on
 # testing a redirect: redirect 301 /index http://68.56.177.238:8080/stage/web/landing.html
 
 
-#Think i finally got it, but it don't work cause the port is fucked
-#RewriteRule ([^/.]+)/([^/.]+)/creator_main/([^/.]+)/?$ stage/web/creator_main?creator=$3 [L]
+# Think i finally got it, but it don't work cause the port is fucked
+# RewriteRule ([^/.]+)/([^/.]+)/creator_main/([^/.]+)/?$ stage/web/creator_main?creator=$3 [L]
 
 # try this
-RewriteRule ([^/.]+)/([^/.]+)/creator/main/([^/.]+)/?$ stage/web/creator_main?creator=$3 [L]
+RewriteRule ([^/.]+)/([^/.]+)/creator/main/([^/.]+)/?$ /stage/web/creator_main?creator=$3 [L]
