--- a/resources/.htaccess
+++ b/resources/.htaccess
@@ -6,7 +6,9 @@ RewriteEngine on
 
 
 # Think i finally got it, but it don't work cause the port is fucked
-# RewriteRule ([^/.]+)/([^/.]+)/creator_main/([^/.]+)/?$ stage/web/creator_main?creator=$3 [L]
+ RewriteRule ([^/.]+)/([^/.]+)/creator_main/([^/.]+)/?$ stage/web/creator_main?creator=$3 [L]
 
 # try this
-RewriteRule ([^/.]+)/([^/.]+)/creator/main/([^/.]+)/?$ http://68.56.177.238:8080/stage/web/creator_main?creator=$3 [L]
+# RewriteRule ([^/.]+)/([^/.]+)/creator/main/([^/.]+)/?$ /stage/web/creator_main?creator=$3 [L]
+
+RewriteRule ^creator/main/([^/.]+)/?$ stage/web/creator_main?creator=$1 [L]
