--- a/resources/.htaccess
+++ b/resources/.htaccess
@@ -1,7 +1,7 @@
 
 Options +FollowSymLinks
 RewriteEngine on
-
+RewriteBase /
 # testing a redirect: redirect 301 /index http://68.56.177.238:8080/stage/web/landing.html
 
 
