--- a/resources/.htaccess
+++ b/resources/.htaccess
@@ -1,8 +1,11 @@
 
-# #Options -Indexes +FollowSymLinks
-# Options +FollowSymLinks
+
 RewriteEngine on
 RewriteBase /stage/web/
+
+Options -Indexes +FollowSymLinks
+# Options +FollowSymLinks
+
 # testing a redirect: 
 redirect 301 /index http://68.56.177.238:8080/stage/web/landing.html
 
