--- a/resources/.htaccess
+++ b/resources/.htaccess
@@ -3,6 +3,10 @@
 RewriteEngine on
 RewriteBase /stage/web/
 
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ /index.php/$1 [L,QSA]
+
 Options -Indexes +FollowSymLinks
 # Options +FollowSymLinks
 
