--- a/resources/.htaccess
+++ b/resources/.htaccess
@@ -12,7 +12,7 @@ RewriteEngine on
 # Options +FollowSymLinks
 
 # testing a redirect: 
-redirect 301 /index http://68.56.177.238:8080/stage/web/landing.html
+# redirect 301 /index http://68.56.177.238:8080/stage/web/landing.html
 
 
 # Think i finally got it, but it don't work cause the port is fucked
