--- a/resources/.htaccess
+++ b/resources/.htaccess
@@ -5,6 +5,10 @@ php_flag engine off
 RewriteEngine On
 RewriteBase /
 
+RewriteEngine on
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule .* index.php/$0 [PT,L] 
 
 # RewriteBase /stage/web/
 
