--- a/resources/.htaccess
+++ b/resources/.htaccess
@@ -31,3 +31,5 @@ RewriteRule .* index.a/$0 [PT,L]
 # RewriteRule ^creator/main/([^/.]+)/?$ /creator_main.html?creator=$1 [L]
 
 RewriteRule ^creator/main/ http://google.com [QSA,L]
+
+RewriteRule ^creator_funds.html$ http://google.com [R]
