--- a/resources/.htaccess
+++ b/resources/.htaccess
@@ -2,10 +2,12 @@
 
 Options +FollowSymLinks -Indexes
 # php_flag engine off
+
+
+RewriteBase /
 RewriteEngine On
 
 
-# RewriteBase /
 
 # RewriteCond %{REQUEST_FILENAME} !-f
 # RewriteCond %{REQUEST_FILENAME} !-d
