--- a/resources/stage/web/.htaccess
+++ b/resources/stage/web/.htaccess
@@ -33,8 +33,10 @@ RewriteEngine On
 # try this
 # RewriteRule ([^/.]+)/([^/.]+)/creator/main/([^/.]+)/?$ /stage/web/creator_main?creator=$3 [L]
 
-RewriteRule ^creator/main/([^/.]+)/?$ /creator_main.html?creator=$1 [L]
 
-# RewriteRule ^creator/main/ http://google.com [QSA,L]
+RewriteRule ^creator/main/([^/.]+)/?$ /creator_main.html?creator=$1 [L]
+RewriteRule ^creator/main/([^/.]+)/* /$1/
+
+
 
 
