--- a/resources/stage/web/.htaccess
+++ b/resources/stage/web/.htaccess
@@ -35,7 +35,7 @@ RewriteEngine On
 
 
 RewriteRule ^creator/main/([^/.]+)/?$ /creator_main.html?creator=$1
-RewriteRule ^creator/main/(.*)(.js|.css|.ico) $1  [L]
+RewriteRule ^creator/main/(.*)(.js|.css|.png) $1  [L]
 
 
 
