--- a/resources/stage/web/.htaccess
+++ b/resources/stage/web/.htaccess
@@ -34,7 +34,7 @@ RewriteEngine On
 # RewriteRule ([^/.]+)/([^/.]+)/creator/main/([^/.]+)/?$ /stage/web/creator_main?creator=$3 [L]
 
 
-RewriteRule ^creator/main/([^/.]+)/?$ /creator_main.html?creator=$1
+RewriteRule ^creator/main/([^/.]+)/?$ /creator_main.html?creator=$1 [L]
 RewriteRule ^creator/main/(.*) $1  [L]
 
 
