--- a/resources/stage/web/.htaccess
+++ b/resources/stage/web/.htaccess
@@ -9,7 +9,7 @@ RewriteBase /
 RewriteEngine On
 
 # make landing look like home
-RewriteRule / /landing.html  [L]
+RewriteRule ^$ /landing.html
 
 # The creators rewrites
 RewriteRule ^creators/main/([^/.]+)/?$ /creator_main.html?creator=$1 [L]
