--- a/resources/web/.htaccess
+++ b/resources/web/.htaccess
@@ -3,20 +3,8 @@
 
 #DirectoryIndex derp.php
 
-
-RewriteEngine On
-
-# reroute to https://
-RewriteCond %{HTTP_HOST} !^\.
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-#Now, rewrite to HTTPS:
-RewriteCond %{HTTPS} off
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-
 RewriteBase /
-
+RewriteEngine On
 
 
 
@@ -33,7 +21,15 @@ RewriteCond %{REQUEST_FILENAME}.html -f
 #RewriteRule ^$ /landing.html [L]
 RewriteRule ^$ /asdf.html [L]
 
-
+# reroute to https://
+RewriteCond %{HTTPS} off
+# First rewrite to HTTPS:
+# Don't put www. here. If it is already there it will be included, if not
+# the subsequent rule will catch it.
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+# Now, rewrite any request to the wrong domain to use www.
+RewriteCond %{HTTP_HOST} !^www\.
+RewriteRule ^(.*)$ https://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 
 # The creators rewrites
