--- a/resources/web/.htaccess
+++ b/resources/web/.htaccess
@@ -10,7 +10,7 @@ RewriteEngine On
 
 
 # html directs
-RewriteRule ^(.+)$ $1.html [L,QSA]
+RewriteRule ^(.+)$ $1.html [QSA]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.html -f
