--- a/resources/web/.htaccess
+++ b/resources/web/.htaccess
@@ -11,7 +11,7 @@ RewriteEngine On
 
 # html directs
 #RewriteRule ^(.+)$ $1.html [QSA]
-RewriteRule ^(.+)$ turd.html [QSA]
+RewriteRule ^(.+)$ landing.html [QSA]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.html -f
