--- a/resources/web/.htaccess
+++ b/resources/web/.htaccess
@@ -12,8 +12,8 @@ RewriteEngine On
 
 
 # html directs
-#RewriteRule ^(.+)$ $1.html [QSA]
-RewriteRule ^(.+)$ landing.html [QSA]
+RewriteRule ^(.+)$ $1.html [QSA]
+#RewriteRule ^(.+)$ landing.html [QSA]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.html -f
