--- a/resources/testweb/.htaccess
+++ b/resources/testweb/.htaccess
@@ -21,6 +21,8 @@ RewriteRule ^(.+)$ $1.html [L,QSA]
 # make landing look like the root
 RewriteRule ^$ /testing_home.html [L]
 
+ErrorDocument 404 /404.html
+
 
 # The creators rewrites
 RewriteRule ^creators/main/([^/.]+)/?$ /creator_main.html?creator=$1 [L]
